# many

./: LICENSE  README.md  many.cabal
src/Control/Many/: Curry.hs  Indexed.hs
src/control/many/: Curry.hs  Types.hs  Unindexed.hs
